--- a/readme.text
+++ b/readme.text
@@ -1,6 +1,5 @@
-first insert message.
-Create a new branch is quick
 Creating a new branch is quick & simple.
+other
 Creating a new branch is quick AND simple.
 second insert
 three insert
