--- a/readme.text
+++ b/readme.text
@@ -1,12 +1,12 @@
-o dev
+first insert message.
 Create a new branch is quick
 Creating a new branch is quick & simple.
-other
 Creating a new branch is quick AND simple.
 second insert
 three insert
 master insert
-my dev
-n dev
-2n
+add merge
+1
+2
 3
+4
